# MAI_OOP_labs

./: README.md
lab1/: CMakeLists.txt
lab2/: five_algebra_operators.cpp  five_constructors.cpp  main.cpp
lab3/: five_angles.cpp  five_angles.hpp  main.cpp
lab4/: main.cpp
lab7/: main.cpp
